# mod

./: README.md
auth_/: Cargo.toml  README.md
auth_/db/function/: signInLog.sql
auth_/db/table/: arch.sql  brand.sql  browser.sql  browserLang.sql  browserName.sql  browserVer.sql  device.sql  gpu.sql  model.sql  os.sql  osName.sql  osVer.sql  signInLog.sql
auth_/src/: db.rs  err.rs  lib.rs  signin.rs  signup.rs
captcha_/: Cargo.toml
captcha_/src/: lib.rs
demo_/: Cargo.toml
sh/backup/mariadb/: dump.coffee  dump.sh  load.coffee  load.sh  package.json
user_/: Cargo.toml
